# Huawei.emoncms

./: .gitignore  Makefile  Makefile.am  README.md  config.h  configure.ac  emoncms.conf.default  emoncms.h  huaweiemoncms.c  huaweiemoncms.h
axp209/: Makefile.am  axp209_emoncms.c  axp209_emoncms.h  gatherAndSend.c
banana_dht22/: Makefile  Makefile.am  banana_dht22_emoncms  banana_dht22_emoncms.c  banana_dht22_emoncms.h  gatherAndSend.c
bme280/: Makefile.am  bme280_emoncms.c  bme280_emoncms.h  bme280_mqtt.c  gatherAndSend.c  gatherData.c
dht22/: Makefile.am  dht22_emoncms.c  dht22_emoncms.h  gatherAndSend.c
gps/: gps_emoncms.sh
huawei/: Makefile  Makefile.am  huawei_emoncms.c  huawei_emoncms.h
raspi_internal/: Makefile  Makefile.am  raspi_internal_emoncms.c  raspi_internal_emoncms.h
raspi_pulsecount/: Makefile  Makefile.am  raspi_pulsecount_emoncms.c  raspi_pulsecount_emoncms.h
wlan/: Makefile  Makefile.am  wlan_emoncms  wlan_emoncms.c  wlan_emoncms.h
