# http://www.gnu.org/software/make/manual/make.html
# http://www.cs.colby.edu/maxwell/courses/tutorials/maketutor/
# http://mij.oltrelinux.com/devel/autoconf-automake/
# http://inti.sourceforge.net/tutorial/libinti/autotoolsproject.html

#######

AM_LDFLAGS = -lconfig -L /usr/local/lib -lwiringPi

sbin_PROGRAMS = axp209_emoncms

axp209_emoncms_SOURCES = axp209_emoncms.c gatherAndSend.c
