# http://www.gnu.org/software/make/manual/make.html
# http://www.cs.colby.edu/maxwell/courses/tutorials/maketutor/
# http://mij.oltrelinux.com/devel/autoconf-automake/
# http://inti.sourceforge.net/tutorial/libinti/autotoolsproject.html

#######

AM_LDFLAGS = -lconfig -L /usr/local/lib -lwiringPi

sbin_PROGRAMS = banana_dht22_emoncms

banana_dht22_emoncms_SOURCES = banana_dht22_emoncms.c gatherAndSend.c
