# http://www.gnu.org/software/make/manual/make.html
# http://www.cs.colby.edu/maxwell/courses/tutorials/maketutor/
# http://mij.oltrelinux.com/devel/autoconf-automake/
# http://inti.sourceforge.net/tutorial/libinti/autotoolsproject.html

# how to do 'make clean'?

#######

AM_LDFLAGS = -lconfig

sbin_PROGRAMS = huawei_emoncms

huawei_emoncms_SOURCES = huawei_emoncms.c
