# http://www.gnu.org/software/make/manual/make.html
# http://www.cs.colby.edu/maxwell/courses/tutorials/maketutor/
# http://mij.oltrelinux.com/devel/autoconf-automake/
# http://inti.sourceforge.net/tutorial/libinti/autotoolsproject.html

#######

AM_LDFLAGS = -lconfig -lpigpio -lpthread -lrt

sbin_PROGRAMS = raspi_pulsecount_emoncms

raspi_pulsecount_emoncms_SOURCES = raspi_pulsecount_emoncms.c
